<resources>
    <string name="app_name">HealthCare: High blood pressure</string>
    <string name="continue_survey">Continue to next question</string>
    <string name="error_continue_survey">Fill the fields correctly to continue</string>
    <string name="finish">Finish</string>
    <string name="finish_survey">Complete survey</string>
    <string name="login" translatable="false">Login</string>
    <string name="survey">Survey</string>
    <string name="register">Register</string>
    <string name="user">User data</string>
    <string name="Register_title">Patient\'s personal data</string>
    <string name="Register_address">Address</string>
    <string name="Register_birth_date">Date of birth</string>
    <string name="Register_birth_country">Country of birth</string>
    <string name="Register_city">City</string>
    <string name="user_data_email">Email</string>
    <string name="Register_lastname">Last name</string>
    <string name="Register_listGender">Male,Female,Other</string>
    <string name="Register_name">Name</string>
    <string name="Register_postal">Zip code</string>
    <string name="Register_región">Region</string>
    <string name="Register_residence_country">Country of residence:</string>
    <string name="Register_gender">Sex:</string>
    <string name="survey_physical_state_1_TextView">1. During the last 7 days, on how many days did you do vigorous physical activities?</string>
    <string name="survey_physical_state_1_TxtImagenHint">Days per week</string>
    <string name="survey_physical_state_2_TextView">2. How much time did you usually spend doing vigorous physical activities on one of those days?</string>
    <string name="survey_physical_state_2_TxtImagenHint1">Hours per day</string>
    <string name="survey_physical_state_2_TxtImagenHint2">Minutes per day</string>
    <string name="survey_physical_state_3_TextView1">3. During the last 7 days, on how many days did you do moderate physical activities?</string>
    <string name="survey_physical_state_3_TxtImagenHint">Days per week</string>
    <string name="survey_physical_state_4_TextView">4. How much time did you usually spend doing moderate physical activities on one of those days?</string>
    <string name="survey_physical_state_4_TxtImagenHint1">Hours per day</string>
    <string name="survey_physical_state_4_TxtImagenHint2">Minutes per day</string>
    <string name="survey_physical_state_5_TextView1">5. During the last 7 days, on how many days did you walk for at least 10 minutes at a time?</string>
    <string name="survey_physical_state_5_TxtImagenHint">Days per week</string>
    <string name="survey_physical_state_6_TxtImagenHint1">Hours per day</string>
    <string name="survey_physical_state_7_TxtImagenHint1">Hours per day</string>
    <string name="survey_physical_state_7_TxtImagenHint2">Minutes per day</string>
    <string name="survey_physical_state_6_TxtImagenHint2">Minutes per day</string>
    <string name="survey_physical_state_7_TextView1">7. During the last 7 days, how much time did you usually spend sitting on a week day?</string>
    <string name="survey_physical_state_6_TextView">6. How much time did you usually spend walking on one of those days?</string>
    <string name="survey_refused">Refused</string>
    <string name="survey_not_sure">Don\'t Know/Not Sure</string>
    <string name="survey_physical_state_7_TextView2">Now think about the time you spent sitting on week days during the last 7 days. Include time spent at work, at home, while doing course work, and during leisure time. This may include time spent sitting at a desk, visiting friends, reading or sitting or lying down to watch television.</string>
    <string name="survey_physical_state_5_TextView2">Now think about the time you spent walking in the last 7 days. This includes at work and at home, walking to travel from place to place, and any other walking that you have done solely for recreation, sport, exercise, or leisure.</string>
    <string name="survey_physical_state_3_TextView2">Now think about activities which take moderate physical effort that you did in the last 7 days. Moderate physical activities make you breathe somewhat harder than normal and may include carrying light loads, bicycling at a regular pace, or doubles tennis. Do not include walking. Again, think about only those physical activities that you did for at least 10 minutes at a time.</string>
    <string name="user_data_listStudiesLevel">No studies,Primary studies,Secondary studies,Professional training,Bachelor\'s degree,Master\'s degree,Doctoral degree</string>
    <string name="user_data_studies">Educational level:</string>
    <string name="error_file_not_found">File not found</string>
    <string name="general_exit">Exit</string>
    <string name="survey_physical_state_view">Physical state survey view</string>
    <string name="two_point" translatable="false">:</string>
    <string name="geolocation">Geolocation</string>
    <string name="tests">Tests</string>
    <string name="api_key_google" translatable="false">NoDisponibleEnVersionPublica/string>
    <string name="api_key_accuweather" translatable="false">NoDisponibleEnVersionPublica</string>
    <string name="api_key_openweather" translatable="false">NoDisponibleEnVersionPublica</string>
    <string name="api_token_waqi" translatable="false">NoDisponibleEnVersionPublica</string>
    <string name="fileNamePersonalLoginInfo" translatable="false">fileNamePersonalLoginInfo.txt</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="user_data_nickname">Nickname</string>
    <string name="user_data_password">Password</string>
    <string name="server_error_login_user">Bad user, not register</string>
    <string name="server_error_login_password">Bad password</string>
    <string name="ip_server_database" translatable="false">155.54.95.x</string>
    <string name="port_server_database" translatable="false">8000</string>
    <string name="server_uri_login_method" translatable="false">/login</string>
    <string name="server_error">Server error communication</string>
    <string name="server_regex_username" translatable="false">^[a-z]{2,}\\d*$</string>
    <string name="server_success_log">Logging success</string>
    <string name="server_regex_email" translatable="false">^\\w+([-+.\']\\w+)*@\\w+([-.]\\w+)*\\.\\w+([-.]\\w+)*$</string>
    <string name="server_regex_zp" translatable="false">^[1-9][0-9]*$</string>
    <string name="user_data_username">Username</string>
    <string name="user_data_password_repeat">Repeat password</string>
    <string name="user_data_bad_username">Bad username format</string>
    <string name="user_data_bad_zp">Bad postal code format</string>
    <string name="user_data_bad_email">Bad email format</string>
    <string name="user_data_bad_same_pass">Passwords are not the same</string>
    <string name="server_uri_register_method" translatable="false">/register</string>
    <string name="server_regex_exists_user" translatable="false">^(?:The\\suser\\salready\\sexists:\\s)(.*)$</string>
    <string name="server_error_register_user">The username already exists</string>
    <string name="server_success_register">User register successful</string>
    <string name="omron_personal_config_text">First step for wristband connection. In this window the physical information of the user is collected to improve the application of the wristband to be linked.</string>
    <string name="omron_personal_config_height">Height</string>
    <string name="omron_personal_config_weight">Weight</string>
    <string name="omron_personal_config_stride">Stride</string>
    <string name="omron_personal_config_title">Personal config</string>
    <string name="general_continue">Continue</string>
    <string name="omron_connect_title">Connect</string>
    <string name="omron_connect_text">Third step for the connection of the wristband. In this activity the first connection to the wristband is made and a file transfer can also be made if desired. Once the first connection is made, the device is saved in memory and the transfer and update can be called from the main activity.</string>
    <string name="omron_scan_title">Scans devices</string>
    <string name="omron_scan_text">Second step for the connection of the wristband. In this window the available wristbands are scanned near the phone. The application must be given bluetooth permissions. While scanning the wristband it must be in scanable mode. Symbols of a bracelet and a phone must appear on the bracelet screen, not to be confused with the reconnection that has the same symbolism with watches inside. Once detected, it must be selected by clicking on the list where the device appears.</string>
    <string name="omron_scan_scan">Scan</string>
    <string name="omron_scan_stop">Stop scan</string>
    <string name="fileNameJsonDataDevice" translatable="false">fileNameJsonDataDevice.txt</string>
    <string name="server_uri_device_method" translatable="false">/device</string>
    <string name="status_title">Services status</string>
    <string name="status_health_text">"Wristband service: "</string>
    <string name="status_data_text">"Data service: "</string>
    <string name="status_device_text">"Wristband connected: "</string>
    <string name="status_health_button">Launch wristband service</string>
    <string name="status_data_button">Launch data service</string>
    <string name="status_check_button">Check services</string>
    <string name="general_wristband">Wristband</string>
    <string name="general_status">Status</string>
    <string name="server_uri_weather_method" translatable="false">/weather</string>
    <string name="status_geo_text">Geoposition service:</string>
    <string name="server_uri_surveys_method" translatable="false">/surveys</string>
    <string name="fileNameJsonDataSurveys" translatable="false">fileNameJsonDataSurveys.txt</string>
    <string name="server_gender_enumeration" translatable="false">Male,Female,Other</string>
    <string name="server_study_level_enumeration" translatable="false">No studies,Primary studies,Secondary studies,Professional training,Bachelor\'s degree,Master\'s degree,Doctoral degree</string>
    <string name="survey_select_physical">Physical status</string>
    <string name="survey_select_diet">Diet adherence</string>
    <string name="survey_select_treatment">Treatment adherence</string>
    <string name="survey_select_social">Social support</string>
    <string name="survey_select_stress">Stress</string>
    <string name="survey_select_anxiety">Anxiety</string>
    <string name="survey_select_depression">Depression</string>
    <string name="survey_select_title">Choose survey</string>
    <string name="login_data_view_title">Personal registration data</string>
    <string name="login_data_view_username">Username:</string>
    <string name="login_data_view_name">Name:</string>
    <string name="login_data_view_surname">Surname:</string>
    <string name="login_data_view_birthdate">Birthdate:</string>
    <string name="login_data_view_gender">Gender:</string>
    <string name="login_data_view_birthcountry">Birth country:</string>
    <string name="login_data_view_region">Region:</string>
    <string name="login_data_view_city">City:</string>
    <string name="login_data_view_zp">ZP:</string>
    <string name="login_data_view_address">Address:</string>
    <string name="survey_select_occas_med">Occasional medication</string>
    <string name="survey_select_chro_med">Chronic medication</string>
    <string name="survey_select_subtitle_occasional">Occasional</string>
    <string name="survey_select_subtitle_periodicals">Periodicals</string>
    <string name="survey_select_subtitle_unique_rare">Unique/Rare</string>
    <string name="survey_select_physical_attributes">Physical attributes</string>
    <string name="survey_select_smoke">Smoking habits</string>
    <string name="survey_select_alcohol">Alcohol</string>
</resources>